# taskify

./: LICENSE  README.md  pyproject.toml
setup/: settings.py  urls.py
todos/: models.py  views.py
todos/migrations/: 0001_initial.py  0002_alter_todo_deadline_alter_todo_finished_at.py
todos/templates/: base.html
todos/templates/todos/: home.html  todo_confirm_delete.html  todo_form.html  todo_list.html
