[tool.poetry]
name = "taskify"
version = "0.1.0"
description = ""
authors = ["Diego Filgueiras <diego.filgueiras.084@ufrn.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
dj-database-url = "2.1.0"
django = "5.0.6"
python-decouple = "3.8"
sqlparse = "0.5.0"
typing-extensions = "4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
